# safav

./: .gitignore  Cargo.toml  README.md
examples/: README.md  basic.rs  polling.rs  term_visualizer.rs
examples/macroquad_visualizer/: Cargo.toml
examples/macroquad_visualizer/src/: main.rs
examples/term_visualizer/: Cargo.toml  README.md
examples/term_visualizer/src/: main.rs
src/: device.rs  device_manager.rs  error.rs  fft.rs  lib.rs  listener.rs  stream.rs
src/platform/: linux.rs  mod.rs  windows.rs
