[package]
name = "safav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "^0.15"
thiserror = "^1.0"
rustfft = "6.1"
downcast-rs = "1.2"
custom_debug = "0.5"

[dependencies.dasp]
version = "0.11.0"
features = ["all"]

[target.'cfg(target_os = "linux")'.dependencies.rust-pulsectl-fork]
git = "https://github.com/Ricky12Awesome/pulsectl.git"

[workspace]
members = ["examples/term_visualizer", "examples/macroquad_visualizer"]