[package]
name = "macroquad_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.egui-macroquad]
path = "../../../egui-macroquad"

[dependencies.macroquad]
version = "0.3.25"
default-features = false
features = ["log"]

[dependencies.safav]
path = "../.."
