[package]
name = "macroquad_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.alloc-tracker]
path = "../../../simple_memory_tracker"

[dependencies.imgui-macroquad]
git = "https://github.com/Ricky12Awesome/imgui_macroquad"

[dependencies.macroquad]
version = "0.4.4"
default-features = false
features = ["log"]

[dependencies.safav]
path = "../.."
